changing cancel icom on cart product

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
     <div class="cart-overlay">
       <div class="cart">
         <span class="close-cart">
-          <i class="fas fa-window-close">x</i>
+          <i
+            ><img
+              src="/photo/cancelled.ico"
+              alt="X"
+              class="fas fa-window-close"
+          /></i>
         </span>
         <h2>your cart</h2>
         <div class="cart-content">
